<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".History"
    android:background="@drawable/gamebg"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/normal_size"
            android:textColor="@color/white"
            android:text="@string/high_score" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_size"
                android:text="@string/team" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="0.3"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_size"
                android:text="@string/number_of_moves" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>

    </LinearLayout>

</LinearLayout>