<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Frame1"
    android:background="@color/noColor"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:gravity="center"
        android:padding="0dp"
        android:background="@drawable/win"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="60dp"
            android:paddingEnd="60dp"
            android:paddingTop="5dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/win_coin"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="1.5"
                android:src="@drawable/yellow" />

            <ImageView
                android:id="@+id/win_text"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="@string/yellow_win"
                android:layout_weight="1"
                android:src="@drawable/yellow_win"/>
        </LinearLayout>

        <TextView
            android:id="@+id/your_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="8pt"
            android:textColor="@color/white"
            android:text="@string/text" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:layout_marginTop="15dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="Your name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_back"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@color/brown"
                android:textColor="@color/white"
                android:text="@string/ok" />
        </LinearLayout>

    </LinearLayout>


</FrameLayout>